@@ -1,0 +1,265 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop \u5973\u738b\u518d\u5275\u9ad8\u5cf0\uff01Blackpink Jennie\u3001Rose \u7a81\u7834\u751f\u6daf\u65b0\u9ad8\uff0cSeventeen \u5275\u4e0b Oricon \u699c\u55ae\u7d00\u9304", "description": "K-pop \u5973\u738b\u518d\u5275\u9ad8\u5cf0\uff01Blackpink Jennie\u3001Rose \u7a81\u7834\u751f\u6daf\u65b0\u9ad8\uff0cSeventeen \u5275\u4e0b Oricon \u699c\u55ae\u7d00\u9304", "url": "https://www.famechos.me/news/K-pop \u5973\u738b\u518d\u5275\u9ad8\u5cf0\uff01Blackpink Jennie\u3001Rose \u7a81\u7834\u751f\u6daf\u65b0\u9ad8\uff0cSeventeen \u5275\u4e0b Oricon \u699c\u55ae\u7d00\u9304.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T20:17:35.685195+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄.html"/>
+<meta name="description" content="K-pop 女王Blackpink成員Jennie、Rose再創生涯新高，Seventeen 創下 Oricon 榜單紀錄，K-pop 女王再度引領樂壇風潮！">
+
+<meta name="keywords" content="K-pop, Blackpink, Jennie, Rose, Seventeen, Oricon 榜單, K-pop 女王, 生涯新高">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄.html" />
+        <meta property="og:title" content="K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄" />
+        <meta property="og:description" content="K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄" />
+        <meta property="twitter:description" content="K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>Blackpink 成員 Jennie 的個人單曲《Mantra》登上了告示牌百大單曲榜（Billboard Hot 100）第 98 名，這是她作為個人歌手在主要單曲榜上取得的最高排名。</p>
+<p>該單曲在全球（不含美國）榜單和全球 200 榜單上分別排名第 2 和第 3。此外，在 iTunes Top Songs Chart 中，它在 47 個地區排名第一，並在英國官方單曲榜 Top 100 中排名第 37。</p>
+<p>另一方面，Rose 也與火星人布魯諾（Bruno Mars）合作的《APT.》創下了生涯新高，登上了 Spotify 的每日全球和美國榜單的最高位置。她是第一位實現這一成就的 K-pop 女性個人歌手。預計《Apt.》將挑戰女性個人歌手 K-pop 發行的最高排名紀錄，這一紀錄是她在 2021 年以《On the Ground》排名第 70 名時創下的。</p>
+<p>Seventeen 的第 12 張迷你專輯《Spill The Feels》登上了 Oricon 的每週專輯排名榜首，根據日本榜單，經紀公司 Pledis Entertainment 週二表示。該專輯在日本銷售了 41 萬張，刷新了今年在日本的每週銷售紀錄。</p>
+<p>這是該樂團第 13 張專輯登上榜首，這是非日本藝人的紀錄。這也是 13 人樂團的第九次連續登上榜首。<p>該專輯在發行首週銷售量超過316萬張，成為今年K-pop藝人最暢銷的專輯，並連續四天登頂Oricon每日專輯排名榜。</p></p>
+<p>同時，該樂團已啟程前往美國，展開新一輪的巡演。</p>
+<p>aespa將於一月恢復第二次世界巡演「Synk: Parallel Line」，巡演地點包括美國、加拿大、墨西哥和歐洲。</p>
+<p>Super Junior成員Yesung宣布將發行個人專輯和舉行演唱會。</p>
+<p>Yesung的第六張個人迷你專輯「It’s Complicated」將於11月5日發行，專輯包含五首歌曲，包括同名主打歌。這張專輯距離他上一張專輯「Unfading Senses」發行已經過了一年多。</p>
+<p>Yesung將於1月18日至19日在首爾舉行個人演唱會，演唱專輯中的歌曲。</p>
+<p>Super Junior於六月發行了單曲「Show Time」，慶祝出道19周年。該團也於六月至九月在亞洲八個地區進行了巡演。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/M_jRy27zL-4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團.html">CN Blue 回歸初心！第 10 張迷你專輯《X》強調純粹樂器聲音，樂團領袖鄭容和：我們要做真正的樂團</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂.html">ILLIT強勢回歸！新專輯《I'll Like You》融入年齡段想法的音樂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行.html">74歲K-pop傳奇人物Cho Yong-pil再度出擊！第20張專輯《20》正式發行</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
