@@ -392,4 +392,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop 女王再創高峰！Blackpink Jennie、Rose 突破生涯新高，Seventeen 創下 Oricon 榜單紀錄.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T20:17:52+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
